# plane-conductor

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  install.md  why.md
docs/internals/: README.md  requirements.md  spec.md
examples/: Dockerfile  docker-compose.yml  minimal-conductor.yaml  nginx.conf  runtime.env.example  sdlc-conductor.yaml
examples/conductor.d/: content.yaml  minimal.yaml  sdlc.yaml
prompts/: README.md
setup/: install.sh
src/plane_conductor/: __init__.py  __main__.py  cli.py  conductor_config.py  config.py  exceptions.py  logging_config.py  mcp_server.py  mcp_tower.py  plane_client.py  runner.py  server.py  webhook.py
src/plane_conductor/setup/plane/: README.md  add_project_members.py  create_labels.py  create_states.py  create_users.py  runner.py  verify.py
tests/: conftest.py  test_conductor_config.py  test_logging_config.py  test_mcp_server_recent_runs.py  test_mcp_tower.py  test_plane_client.py  test_runner.py  test_server.py  test_setup.py  test_webhook.py
tests/e2e/: README.md  conftest.py  test_label_create_delete.py  test_read_only.py  test_setup_roundtrip.py
tests/fixtures/webhook_payloads/: issue_comment_with_mention.json  issue_created.json
