[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plane-conductor"
version = "0.2.0"
description = "Webhook orchestrator that turns Plane mentions into Claude Code agent runs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Dmitry Volodchenkov" }]
keywords = ["plane", "claude", "agents", "orchestrator", "webhook", "sdlc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "mcp>=1.0",
]
mcp = [
    "mcp>=1.0",
]
# `tower` is the public, intent-named extra; aliased to `mcp` so the two
# can't drift on the next bump. `pip install plane-conductor[tower]` and
# `[mcp]` resolve to the same set of deps.
tower = [
    "plane-conductor[mcp]",
]

[project.scripts]
plane-conductor = "plane_conductor.cli:app"
plane-conductor-mcp = "plane_conductor.mcp_server:main"
plane-conductor-tower = "plane_conductor.mcp_tower:main"

[project.urls]
Homepage = "https://github.com/volodchenkov/plane-conductor"
Repository = "https://github.com/volodchenkov/plane-conductor"
Issues = "https://github.com/volodchenkov/plane-conductor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plane_conductor"]

[tool.hatch.build.targets.sdist]
include = [
    "src/plane_conductor",
    "setup",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "setup"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src/plane_conductor"]
exclude = ["src/plane_conductor/mcp_server\\.py$"]

[[tool.mypy.overrides]]
module = ["structlog.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/plane_conductor"]
omit = [
    "src/plane_conductor/__main__.py",
    "src/plane_conductor/cli.py",
    "src/plane_conductor/mcp_server.py",
    "src/plane_conductor/mcp_tower.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
